fixed extra space on html, because it was creating a white line on the right

--- a/src/App.scss
+++ b/src/App.scss
@@ -9,7 +9,7 @@
   justify-content: space-between;
   background-color: $platinum;
   font-family: "DM Mono", monospace;
-  // overflow-x: hidden;
+  overflow-x: hidden;
 
   #burger {
     position: fixed;
